Text comments were wider than the area reserved for this purpose...

--- a/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
+++ b/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
@@ -3727,6 +3727,7 @@ ul#attachmentList li.attachmentListItem .linkAllVersions a {
     text-align: justify;
     text-indent: 41px;
 	margin:0;
+	white-space: normal;
 }
 
 .commentaires #list-box {
