Externalizing styles of file icons in result page of search engine

--- a/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
+++ b/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
@@ -2105,6 +2105,16 @@ td.browsebar a:hover {
 	padding-top: 10px;
 }
 
+#globalResultList .fileIcon {
+	vertical-align: middle;
+	margin-right: 5px;
+}
+
+#globalResultList .fileDownload {
+	vertical-align: middle;
+	margin-left: 3px;
+}
+
 #globalResultHelp {
 	padding-top: 10px;
 }
