--- a/src/site/xdoc/installation.xml.vm
+++ b/src/site/xdoc/installation.xml.vm
@@ -97,8 +97,8 @@ Please find a list of the tools you will need to install Silverpeas below.<br/>
             <strong>pgAdmin</strong>
           </a> which provides a GUI to manage Postgresql.
         </p>
-        <subsection name="Postgresql on Linux">
-        <p>For Linux users, here are the commands to run from a xTerm console to configure such a database :<br/>
+        <subsection name="Postgresql on GNU/Linux">
+        <p>For GNU/Linux users, here are the commands to run from a xTerm console to configure such a database :<br/>
             <source>
 <b>silverpeas@sd-7358:~$</b> sudo apt-get install postgresql
 <b>silverpeas@sd-7358:~$</b>  sudo -i
@@ -111,36 +111,50 @@ Please find a list of the tools you will need to install Silverpeas below.<br/>
       </subsection>
     </section>
     <section name="Installation">
+      <p>You will get better performance with GNU/Linux systems.</p>
       <subsection name="Installing JBoss">
-        <p>Currently we provide a packaged and pre-configured version of JBoss 4.0.3 for Windows. <br/>
+        <p>Since version 5.6, Silverpeas runs by default with JBoss AS 6.0 (JBoss 4 will no longer be supported from the version 5.7).<br/>
+        Please download it from:</p>
+        <ul>
+          <li><a href="http://sourceforge.net/projects/jboss/files/JBoss/JBoss-6.0.0.Final/jboss-as-distribution-6.0.0.Final.zip"><img src="images/windows_logo_24X24.png"/><img src="images/linux_logo_24X24.png"/>here for both Windows and GNU/Linux</a></li>
+        </ul> 
+        <p>For older versions, we provide a pre-packaged and pre-configured version of JBoss 4.0.3.<br/>
         Please download it from :</p>
         <ul>
           <li><a href="http://repository.silverpeas.org/files/jboss403.zip"><img src="images/windows_logo_24X24.png"/> here for Windows</a></li>
-          <li><a href="http://repository.silverpeas.org/files/jboss403.tar.gz"><img src="images/linux_logo_24X24.png"/> here for Linux</a>.</li>
+          <li><a href="http://repository.silverpeas.org/files/jboss403.tar.gz"><img src="images/linux_logo_24X24.png"/> here for GNU/Linux</a>.</li>
         </ul>
-        <p>You have to set-up the environment variable <b>JBOSS_HOME</b> for the directory in which you have unzipped the jboss403.zip</p>
+        <p>You have to set-up the environment variable <b>JBOSS_HOME</b> for the directory in which you have extracted the JBoss archive.</p>
       </subsection>
       <subsection name="Preparing Silverpeas">
         <p>We currently provide a packaged and pre-configured version that will build Silverpeas and its database. Please download </p>
 <fieldset>
-        <legend>Stable release</legend>
+        <legend>Stable release for JBoss AS 6.0</legend>
           <ul>
-          <li><a href="http://repository.silverpeas.org/files/silverpeas-${installer_stable_version}.zip"><img src="images/windows_logo_24X24.png"/> the last stable version for Windows</a></li>
-          <li><a href="http://repository.silverpeas.org/files/silverpeas-${installer_stable_version}.tar.gz"><img src="images/linux_logo_24X24.png"/> the last stable version  for Linux</a></li>
+          <li><a href="http://repository.silverpeas.org/files/silverpeas-${installer_stable_version}-jboss6.zip"><img src="images/windows_logo_24X24.png"/> the last stable version for Windows</a></li>
+          <li><a href="http://repository.silverpeas.org/files/silverpeas-${installer_stable_version}-jboss6.tar.gz"><img src="images/linux_logo_24X24.png"/> the last stable version  for GNU/Linux</a></li>
+        </ul>
+</fieldset>
+<fieldset>
+        <legend>Stable release for JBoss 4.0.3</legend>
+          <ul>
+          <li><a href="http://repository.silverpeas.org/files/silverpeas-${installer_stable_version}-jboss4.zip"><img src="images/windows_logo_24X24.png"/> the last stable version for Windows</a></li>
+          <li><a href="http://repository.silverpeas.org/files/silverpeas-${installer_stable_version}-jboss4.tar.gz"><img src="images/linux_logo_24X24.png"/> the last stable version  for GNU/Linux</a></li>
         </ul>
 </fieldset>
 <fieldset>
         <legend>Development release</legend>
         <ul>
-          <li><a href="http://repository.silverpeas.org/files/silverpeas-${installer_version}.zip"><img src="images/windows_logo_24X24.png"/> the current development version for Windows</a></li>
-          <li><a href="http://repository.silverpeas.org/files/silverpeas-${installer_version}.tar.gz"><img src="images/linux_logo_24X24.png"/> the current development version for Linux</a></li>
+          <li><a href="http://repository.silverpeas.org/files/silverpeas-${installer_version}-jboss6.zip"><img src="images/windows_logo_24X24.png"/> the current development version for Windows</a></li>
+          <li><a href="http://repository.silverpeas.org/files/silverpeas-${installer_version}-jboss6.tar.gz"><img src="images/linux_logo_24X24.png"/> the current development version for GNU/Linux</a></li>
         </ul>
 </fieldset>
         <p>1. Unzip/decompress the contents into a <code>silverpeas</code> directory,</p>
         <p>2. Define an environment variable <b>SILVERPEAS_HOME</b> that points to this directory.</p>
         <p>For example:<br/>
-        Unzip the <b>silverpeas-${installer_stable_version}.zip</b> file into <i>C:\Java</i>.<br/>
-        The <code>%SILVERPEAS_HOME%</code> should be located at  <i>C:\Java\silverpeas-${installer_stable_version}</i>.
+        Unzip the <b>silverpeas-${installer_stable_version}-jboss6.zip</b> file into <i>C:\Java</i>.<br/>
+        The <code>%SILVERPEAS_HOME%</code> should be located at  <i>C:/Java/silverpeas-${installer_stable_version}-jboss6</i> (the slash instead of backslash characters are normal and the
+        environment variable SILVERPEAS_HOME should be set as such).
         </p>
        
       </subsection>
