Feature #1710. Ends of the adding of a new position to a classification. Finally, it remains to implement the position modification

--- a/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
+++ b/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
@@ -3942,3 +3942,7 @@ html:not([lang*=""]) .add_position:hover {
   color: #B9B9B9;
   background-color: #EAEAEA;
 }
+
+#pdc-edition-box img {
+  width: 5px;
+}
