--- a/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
+++ b/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
@@ -176,6 +176,7 @@ Definition des class de style Silverpeas
 .bgDegradeGris {
 	border:1px solid #cdcdcd;
 	color:#333;
+	margin-bottom:10px;
 		background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#e5e5e5));
 		background: -moz-linear-gradient(top, #fff, #e5e5e5);
 		/* For Internet Explorer 5.5 - 7 */
@@ -190,6 +191,18 @@ Definition des class de style Silverpeas
 	margin:0;
 	padding:5px;
 	font-size:110%;	
+}
+.bgDegradeGris p {
+	padding:11px 17px 0 17px;
+	margin:0;
+	font-size:100%;
+	line-height:140%;
+	color:#666;
+}
+
+.bgDegradeGris p b {
+	color:#333;
+	font-size:110%;
 }
 /* Couleur de l'interface : Frame */
 .couleurCadre {
