Il manque author, avatar, domaine pour permanent link et test affichage sous les IE

--- a/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
+++ b/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
@@ -143,6 +143,12 @@ TD.sommaire {
 /***************************************
 Definition des class de style Silverpeas
 ***************************************/
+
+.clean {
+	padding:0;
+	margin:0;
+}
+
 .peer {
 	color: #033111
 }
@@ -167,6 +173,80 @@ Definition des class de style Silverpeas
 
 }
 
+.bgDegradeGris {
+	border:1px solid #cdcdcd;
+	color:#333;
+	margin-bottom:10px;
+		background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#e5e5e5));
+		background: -moz-linear-gradient(top, #fff, #e5e5e5);
+		/* For Internet Explorer 5.5 - 7 */
+		filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#FFFFFFFF, endColorstr=#e5e5e5e5);
+		/* For Internet Explorer 8 */
+		-ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#FFFFFFFF, endColorstr=#e5e5e5e5)";
+	}
+.bgDegradeGris.header{
+	border-top:0;
+	border-right:0;
+	border-left:0;
+	margin:0;
+	padding:5px;
+	font-size:110%;	
+}
+.bgDegradeGris p, .bgDegradeGris .paragraphe {
+	padding:11px 17px 0 17px;
+	margin:0;
+	font-size:100%;
+	line-height:140%;
+	color:#666;
+}
+
+.bgDegradeGris p b, .bgDegradeGris .paragraphe b {
+	color:#333;
+	font-weight:100;
+}
+
+.principalContent{
+	margin-right:320px;
+	margin-top:10px;
+}
+.rightContent{
+	width:310px;
+	clear:right;
+	float:right;
+	margin-top:10px;
+}
+
+.clearAll {
+	clear:both;
+}
+
+.linkUser {
+	color: #3A5998;
+}
+.linkUser:hover {
+	color: #666699;
+}
+
+.inputPermalink {
+	border: 1px solid #CACACA;
+    color: #333333;
+    width: 90%;
+}
+
+.profilPhoto {
+ 	border:1px solid #CCCCCC;
+	overflow:hidden;
+}
+
+.bgDegradeGris .profilPhoto {
+	float:right;
+	width:30px;
+	height:30px;
+}
+
+.bgDegradeGris .profilPhoto img{
+	height:30px;
+}
 /* Couleur de l'interface : Frame */
 .couleurCadre {
 	background-color: #DEDEDE
@@ -2238,11 +2318,13 @@ td.browsebar a:hover {
 }
 
 .attachments {
-	width: 150px;
+	min-width: 150px;
+	position:relative;
 }
 
-.attachments .header {
-	text-align: center;
+.attachments h4 {
+	background:transparent url(/silverpeas/util/icons/attachedFiles.gif)  top right no-repeat;
+	height:16px;
 }
 
 .attachments .dragNdrop {
@@ -2430,11 +2512,9 @@ caption {
 }
 
 #directory #users .profilPhoto {
- 	border:1px solid #CCCCCC;
 	float:left;
 	height:113px;
 	margin:7px;
-	overflow:hidden;
 	width:87px;
 }
 #directory #users .profilPhoto img {
@@ -2973,10 +3053,8 @@ caption {
 }
 
 #myProfile .profilPhoto {
- 	border:1px solid #CCCCCC;
 	height:140px;
 	margin:7px 6px;
-	overflow:hidden;
 	width:108px;
 }
 #myProfile .profilPhoto img {
@@ -3134,10 +3212,8 @@ caption {
 }
 
 #publicProfile .profilPhoto {
- 	border:1px solid #CCCCCC;
 	height:140px;
 	margin:7px 6px;
-	overflow:hidden;
 	width:108px;
 }
 #publicProfile .profilPhoto img {
@@ -3275,7 +3351,6 @@ caption {
 #newsFeedProfil .profilPhoto {
 	width:50px;
 	height:50px;
-	overflow:hidden;
 	display: inline;
 	border:0;
 	float:left;
@@ -3302,7 +3377,6 @@ caption {
 #newsFeedProfil .txt .detail .profilPhoto {
 	width:25px;
 	height:25px;
-	overflow:hidden;
 	border:0;
 	float:inherit;
 	clear:none;
@@ -3416,11 +3490,9 @@ html > body #invitationProfil .a_invitation , html > body  #contactProfil .a_con
 */
 
 #invitationProfil .profilPhoto, #contactProfil  .profilPhoto{
-    border: 1px solid #CCCCCC;
     float: left;
     height: auto;
     margin: 7px;
-    overflow: hidden;
     width: 64px;
 	float:left;
 	clear:both;
@@ -3541,6 +3613,9 @@ a.yuimenuitemlabel-disabled:hover {
 
 ul#attachmentList.ui-sortable {
 	/*cursor:default;*/
+	position:relative;
+	margin:0;
+	padding:0;
 }
 
 ul#attachmentList {
@@ -3552,6 +3627,7 @@ ul#attachmentList {
 ul#attachmentList li.attachmentListItem {
 	margin:0;
     padding:10px;
+    position:relative;
 }
 
 ul#attachmentList li.ui-state-highlight {
@@ -3564,11 +3640,11 @@ ul#attachmentList li.ui-state-highlight {
 
 ul#attachmentList li.attachmentListItem .lineSize,
 ul#attachmentList li.attachmentListItem .lineMain {
-    white-space: nowrap;
     display: block;
     position: relative;
     padding: 1px 24px 2px 24px;
 }
+
 
 ul#attachmentList li.attachmentListItem .lineSize img {
 	position: absolute;
