--- a/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
+++ b/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
@@ -180,10 +180,12 @@ Definition des class de style Silverpeas
 		background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#e5e5e5));
 		background: -moz-linear-gradient(top, #fff, #e5e5e5);
 		/* For Internet Explorer 5.5 - 7 */
-		filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#FFFFFFFF, endColorstr=#e5e5e5e5);
+		filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#ffffffff, endColorstr=#ffe5e5e5);
 		/* For Internet Explorer 8 */
-		-ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#FFFFFFFF, endColorstr=#e5e5e5e5)";
+		-ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#ffffffff, endColorstr=#ffe5e5e5)";
+		min-height:14px;
 	}
+
 .bgDegradeGris.header{
 	border-top:0;
 	border-right:0;
@@ -192,17 +194,71 @@ Definition des class de style Silverpeas
 	padding:5px;
 	font-size:110%;	
 }
-.bgDegradeGris p {
+
+* html 	.bgDegradeGris {
+	background-color:#e9e9e9;
+}
+* html 	.bgDegradeGris.header {
+	background-color:#efefef;
+}
+	
+.bgDegradeGris p, .bgDegradeGris .paragraphe {
 	padding:11px 17px 0 17px;
 	margin:0;
 	font-size:100%;
 	line-height:140%;
 	color:#666;
+	position:relative;
 }
 
-.bgDegradeGris p b {
+.bgDegradeGris p b, .bgDegradeGris .paragraphe b {
 	color:#333;
-	font-size:110%;
+	font-weight:100;
+}
+
+.principalContent{
+	margin-right:320px;
+	margin-top:10px;
+}
+.rightContent{
+	width:310px;
+	clear:right;
+	float:right;
+	margin-top:10px;
+}
+
+.clearAll {
+	clear:both;
+}
+
+.linkUser {
+	color: #3A5998;
+}
+.linkUser:hover {
+	color: #666699;
+}
+
+.inputPermalink {
+	border: 1px solid #CACACA;
+    color: #333333;
+    width: 90%;
+}
+
+.profilPhoto {
+ 	border:1px solid #CCCCCC;
+	overflow:hidden;
+}
+
+.bgDegradeGris .profilPhoto {
+	position:absolute;
+	width:30px;
+	height:30px;
+	top:10px;
+	right:10px;
+}
+
+.bgDegradeGris .profilPhoto img{
+	height:30px;
 }
 /* Couleur de l'interface : Frame */
 .couleurCadre {
@@ -2469,11 +2525,9 @@ caption {
 }
 
 #directory #users .profilPhoto {
- 	border:1px solid #CCCCCC;
 	float:left;
 	height:113px;
 	margin:7px;
-	overflow:hidden;
 	width:87px;
 }
 #directory #users .profilPhoto img {
@@ -3012,10 +3066,8 @@ caption {
 }
 
 #myProfile .profilPhoto {
- 	border:1px solid #CCCCCC;
 	height:140px;
 	margin:7px 6px;
-	overflow:hidden;
 	width:108px;
 }
 #myProfile .profilPhoto img {
@@ -3173,10 +3225,8 @@ caption {
 }
 
 #publicProfile .profilPhoto {
- 	border:1px solid #CCCCCC;
 	height:140px;
 	margin:7px 6px;
-	overflow:hidden;
 	width:108px;
 }
 #publicProfile .profilPhoto img {
@@ -3314,7 +3364,6 @@ caption {
 #newsFeedProfil .profilPhoto {
 	width:50px;
 	height:50px;
-	overflow:hidden;
 	display: inline;
 	border:0;
 	float:left;
@@ -3341,7 +3390,6 @@ caption {
 #newsFeedProfil .txt .detail .profilPhoto {
 	width:25px;
 	height:25px;
-	overflow:hidden;
 	border:0;
 	float:inherit;
 	clear:none;
@@ -3455,11 +3503,9 @@ html > body #invitationProfil .a_invitation , html > body  #contactProfil .a_con
 */
 
 #invitationProfil .profilPhoto, #contactProfil  .profilPhoto{
-    border: 1px solid #CCCCCC;
     float: left;
     height: auto;
     margin: 7px;
-    overflow: hidden;
     width: 64px;
 	float:left;
 	clear:both;
@@ -3936,6 +3982,7 @@ button {
 	color:#4d4d4d;
 	border-bottom:1px solid #e9e9e9;
 }
+
 
 .list_pdc_position ul li {
 	background:transparent url(../icons/list-puce-green.gif) 20px 8px no-repeat;
