--- a/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
+++ b/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
@@ -255,6 +255,7 @@ Definition des class de style Silverpeas
 	height:30px;
 	top:10px;
 	right:10px;
+	text-align: center;
 }
 
 .bgDegradeGris .profilPhoto img{
