--- a/war-core/src/main/webapp/style.css
+++ b/war-core/src/main/webapp/style.css
@@ -57,6 +57,20 @@ body {
 	min-height:424px;
 	height:800px;
 }
+
+#backgroundBig {
+	background:url(images/bgBig.gif) no-repeat;
+	min-height:524px;
+	height:800px;
+}
+
+#backgroundBig .submit{
+	color: #666666;
+	text-decoration: none;
+	font-weight: bold;
+	position: static;
+}
+
 .cadre{
 	/*height:285px;*/
 	margin:0 auto;
@@ -102,7 +116,7 @@ select option {
 	float:right;
 	margin-top:30px;
 	font-size:14px;
-	text-align:left;	
+	text-align:left;
 }
 
 .information span {
@@ -159,7 +173,7 @@ p label span {
 	float:right;
 	margin-top:10px;
 	font-size:14px;
-	text-align:left;	
+	text-align:left;
 	width: 300px;
 }
 
@@ -171,10 +185,10 @@ p label span {
   float:right;
   margin-top:30px;
   font-size:14px;
-  text-align:left;	
+  text-align:left;
 }
 .fnfinformation ul li {
   padding-left:5px;
   margin-left:25px;
-  text-align:left;	
+  text-align:left;
 }
