Feature #1710. Integrates the work of Aurore about the classification onto the PdC of a content in the preview mode

--- a/war-core/src/main/webapp/util/styleSheets/fieldset.css
+++ b/war-core/src/main/webapp/util/styleSheets/fieldset.css
@@ -99,12 +99,8 @@ label {
 	clear:both ; 
 }
 
-.champs input {
-	width:96%; 
-	margin:0;
-}
-.champs select {
-	width:96%; 
+.champs input, .champs select {
+	width:94%; 
 	margin:0;
 }
 
