--- a/war-core/src/main/webapp/util/styleSheets/fieldset.css
+++ b/war-core/src/main/webapp/util/styleSheets/fieldset.css
@@ -118,6 +118,14 @@ input.inputHour{
 	margin:0;
 }
 
+.champs input.checkbox, .champs input.radio {
+	width:13px;
+	vertical-align:middle;
+	margin:0 5px 0 15px;
+	border:0;
+}
 
-
-
+.champs input.checkbox:first-child, .champs input.radio:first-child {
+	margin-left:0;
+	border:0;
+}
