Fixing bug btn add position ie7 related to feature #2229

--- a/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
+++ b/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
@@ -4090,7 +4090,10 @@ html:not([lang*=""]) .add_position:hover {
 }
 
 #classification #list_pdc_position.field {
-  width: 98%;
+	width: 98%;
+	clear:both;
+	display:block;
+	float:none;
 }
 
 #classification.preview .list_pdc_position {
