--- a/src/site/xdoc/index.xml.vm
+++ b/src/site/xdoc/index.xml.vm
@@ -59,39 +59,38 @@
         </li>
       </ol>
     </section> 
-    <section name="Architecture">
+<section name="Architecture">
+      <p>
+        <img align="right" src="images/bus_silverpeas.png" alt="" />
+      </p>        
       <p>Silverpeas functions in the Java J2EE environment. The WCM layer is used to publish public contents on the web and to build an Xnet platform, or Web 2.0 website.
-        <br/>
-        <img src="images/schemaMailing_mid_uk.jpg" />
+        The Services Oriented Architecture is made up of:
       </p>
-      <p>The Services Oriented Architecture is made up of:</p>
       <ul>
-        <li>Silverpeas Core</li>
-        <li>Specific services</li>
+        <li>
+          <strong>an applicative bus for:</strong>
+          <ul>
+            <li>authentification</li>
+            <li>rights management</li>
+            <li>a search engine</li>
+            <li>a workflow engine</li>
+            <li>notifications</li>
+            <li>subscriptions</li>
+            <li>versioning</li>
+          </ul>
+        </li>
+        <li>
+          <strong>specific services for different professional sectors.</strong>
+          <ul>
+            <li>Document Management</li>
+            <li>Collaborative Management</li>
+            <li>Knowledge Management</li>
+            <li>Content Management</li>
+            <li>Workflow</li>
+            <li>Connectors</li>
+          </ul>
+        </li>      
       </ul>
-      <subsection name="Silverpeas Core">
-        <p>It is an applicative bus for :</p>
-        <ul>
-          <li>authentification</li>
-          <li>rights management</li>
-          <li>a search engine</li>
-          <li>a workflow engine</li>
-          <li>notifications</li>
-          <li>subscriptions</li>
-          <li>versioning</li>
-        </ul>
-      </subsection>
-      <subsection name="Specific Services for different professional sectors">
-        <p>
-          Silverpeas is used to classify the contents on themes, independant of the spaces and folders in which they are stored and to for subscribing to themes.
-        </p>
-        <ul>
-          <li>simplified WYSIWYG interface for editing</li>
-          <li>a access to the portal via the Web browser</li>
-          <li> personalised tools for the workspacel</li>
-          <li>multilingual interfaces and glossairies (fr/en)</li>
-        </ul>
-      </subsection>
     </section>
     <section name="Operating Systems">
       <p>Silverpeas operates under</p>
