Feature #2095 Update the texts used in the predefinition of a classification on the PdC. Change the style of the button with which a new position on the PdC is added when predefining a classification or publishing a new content. Add a message to inform the user he can explicitly predefine a classification on the PdC for a given node or he can use the predefined classification of the parent node

--- a/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
+++ b/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
@@ -1496,7 +1496,7 @@ td.browsebar a:hover {
 	height: 20px;
 }
 
-.milieuBoutonV5 a,#domainsBar .milieuBoutonV5 a {
+a.milieuBoutonV5, .milieuBoutonV5 a,#domainsBar .milieuBoutonV5 a {
 	color: #FFFFFF;
 }
 
@@ -4099,8 +4099,9 @@ html:not([lang*=""]) .add_position:hover {
 	right:5px;
 }
 
-#pdc-addition-box #valid_position {
+#pdc-addition-box .valid_position {
 	margin:10px 10px 10px  180px;
+    line-height: 20px;
 	float:left;
 }
 #classification .legende { 
